<resources>
    <string name="open">open</string>
    <string name="close">close</string>
    //activities
    <string name="app_name">AndroidAplikacija</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_createContact">CreateContactActivity</string>
    <string name="title_activity_createEmail">CreateEmailActivity</string>
    <string name="title_activity_createFolder">CreateFolderActivity</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_emails">EmailsActivity</string>
    <string name="title_activity_folder">FolderActivity</string>
    <string name="title_activity_folders">FoldersActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

    //emails activity
    <string name="btnText_contact">Contact</string>
    <string name="btnText_Contacts">Contacts</string>
    <string name="btnText_create_contact">Create Contact</string>
    <string name="btnText_email">Email</string>
    <string name="btnText_folder">Folder</string>
    <string name="btnText_folders">Folders</string>
    <string name="btnText_create_folder">Create Folder</string>
    <string name="btnText_settings">Settings</string>
    <string name="btnText_profile">Profile</string>

    //login activity
    <string name="btnText_login">Login</string>
    <string name="edit_txt_pass">password</string>
    <string name="edit_txt_user">username</string>

    //contact activity
    <string name="txtView_contact">Contact:</string>
    <string name="txtView_first_name">First name:</string>
    <string name="txtView_last_name">Last name:</string>
    <string name="txtView_email">Email:</string>
    <string name="btnText_create_email">Create email</string>
    <string name="txtView_emailSenderString">email sender</string>
    <string name="txtView_emailTitleString">Naslov Emaila</string>
    <string name="txtView_emailContentString">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="btnReplyString">Reply</string>
    <string name="btnForwardString">Forward</string>
    <string name="btnReplyToAllString">Reply To All</string>
    <string name="btnBackSting">B</string>
    <string name="txtView_createEmailToString">To:</string>
    <string name="editText_createEmailTitleString">Title</string>
    <string name="editTextEmailContentString">Email content</string>

    //Create Contact Activity
    <string name="contact_id">Contact ID:</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="email">Email:</string>
    <string name="home">Home</string>
    <string name="mHome">Home</string>
    <string name="mContacts">Contacts</string>
    <string name="mFolders">Folders</string>
    <string name="mSettings">Settings</string>
    <string name="mLogout">Logout</string>

   //Create Folder Activity
    <string name="folder_name">Folder Name:</string>

    //Profile Activity
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="lastname">lastname</string>

    //Drawer
    <string name="Home">Home</string>
    <string name="Emails">Emails</string>
    <string name="Contacts">Contacts</string>
    <string name="Folders">Folders</string>
    <string name="Settings">Settings</string>
    <string name="nav_first_name">First name</string>
    <string name="nav_last_name">Last name</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>


</resources>
