<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_mails"
            android:icon="@drawable/ic_email_icon"
            android:title="@string/Emails">
        </item>

        <item android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_icon"
            android:title="@string/Contacts">

        </item>

        <item android:id="@+id/nav_folder"
            android:icon="@drawable/ic_folder_icon"
            android:title="@string/Folders">

        </item>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_icon"
            android:title="@string/Settings">
        </item>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/mLogout">
        </item>
    </group>
</menu>