<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailActivity"
    android:layout_margin="5dp">

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnBackEmailID"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/toolbar"
        android:text="@string/btnBackSting"/>

    <TextView
        android:id="@+id/txtView_emailTitleID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBackEmailID"
        android:textSize="35sp"
        android:text="@string/txtView_emailTitleString"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtView_emailSenderID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtView_emailTitleID"
        android:textSize="20sp"
        android:text="@string/txtView_emailSenderString"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/txtView_emailContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtView_emailSenderID"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/txtView_emailContentString" />
    <RelativeLayout
        android:layout_below="@id/txtView_emailContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/btnReplyID"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/btnReplyString"
            android:layout_toLeftOf="@id/btnReplyToAllID"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:id="@+id/btnReplyToAllID"
            android:layout_centerInParent="true"
            android:text="@string/btnReplyToAllString"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textAllCaps="false" />

        <Button
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:id="@+id/btnForwardID"
            android:layout_toEndOf="@id/btnReplyToAllID"
            android:text="@string/btnForwardString"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textAllCaps="false"/>

    </RelativeLayout>



</RelativeLayout>